# railgun

./: Justfile
rust/: Cargo.toml  README.md
rust/crates/railgun/: Cargo.toml
rust/crates/railgun-contracts/: Cargo.toml
rust/crates/railgun-contracts/src/: abi.rs  chain.rs  events.rs  lib.rs  provider.rs
rust/crates/railgun-contracts/src/relay_adapt/: error.rs  helper.rs  mod.rs
rust/crates/railgun-crypto/: Cargo.toml
rust/crates/railgun-crypto/src/: babyjubjub.rs  curve25519.rs  ecies.rs  ed25519.rs  encryption.rs  hash.rs  lib.rs  poseidon.rs  xchacha20.rs
rust/crates/railgun-crypto/tests/: fuzz_crypto.rs
rust/crates/railgun-db/: Cargo.toml
rust/crates/railgun-db/src/: lib.rs
rust/crates/railgun-engine/: Cargo.toml
rust/crates/railgun-engine/src/: debugger.rs  engine.rs  extract_transaction_data.rs  lib.rs  poi_proof.rs  poi_validation.rs  railgun_txid.rs  token_data_getter.rs
rust/crates/railgun-engine/tests/: extract_transaction_data_v2.rs
rust/crates/railgun-key-derivation/: Cargo.toml
rust/crates/railgun-key-derivation/src/: address.rs  bip32.rs  bip39.rs  chain.rs  lib.rs  wallet_node.rs
rust/crates/railgun-key-derivation/tests/: fuzz_keyderivation.rs
rust/crates/railgun-merkletree/: Cargo.toml
rust/crates/railgun-merkletree/src/: lib.rs  merkle_proof.rs  merkletree.rs  txid.rs  utxo.rs
rust/crates/railgun-models/: Cargo.toml
rust/crates/railgun-models/src/: engine_types.rs  event_types.rs  formatted_types.rs  lib.rs  merkletree_types.rs  poi_types.rs  prover_types.rs  transaction_constants.rs  transaction_types.rs  txo_types.rs  wallet_types.rs
rust/crates/railgun-note/: Cargo.toml
rust/crates/railgun-note/src/: lib.rs  memo.rs  note_util.rs  shield_note.rs  transact_note.rs  unshield_note.rs  wallet_info.rs
rust/crates/railgun-note/tests/: fuzz_note.rs
rust/crates/railgun-poi/: Cargo.toml
rust/crates/railgun-poi/src/: blinded_commitment.rs  global_tree_position.rs  lib.rs  poi.rs  poi_node_interface.rs
rust/crates/railgun-poi/tests/: fuzz_poi.rs
rust/crates/railgun-prover/: Cargo.toml
rust/crates/railgun-prover/src/: ark_circom_backend.rs  bundled_artifacts.rs  error.rs  lib.rs  progress_service.rs  proof_cache.rs  proof_cache_poi.rs  rapidsnark.rs
rust/crates/railgun-solutions/: Cargo.toml
rust/crates/railgun-solutions/src/: complex_solutions.rs  lib.rs  nullifiers.rs  simple_solutions.rs  spending_group_extractor.rs  utxos.rs
rust/crates/railgun-solutions/tests/: solutions.rs
rust/crates/railgun-transaction/: Cargo.toml
rust/crates/railgun-transaction/src/: abi.rs  bound_params.rs  lib.rs  railgun_txid.rs  transaction.rs
rust/crates/railgun-transaction/tests/: fuzz_transaction.rs
rust/crates/railgun-utils/: Cargo.toml
rust/crates/railgun-utils/src/: bigint.rs  bytes.rs  lib.rs
rust/crates/railgun-utils/tests/: fuzz_bytes.rs
rust/crates/railgun-wallet/: Cargo.toml
rust/crates/railgun-wallet/examples/: desktop_wallet.rs  redb_backend.rs
rust/crates/railgun-wallet/src/: abstract_wallet.rs  hardware_wallet.rs  lib.rs  railgun_wallet.rs  view_only_wallet.rs  wallet_info.rs
rust/crates/railgun/src/: lib.rs
rust/crates/railgun/tests/: e2e_sync_balances.rs
rust/docs/: PROVING.md
rust/oracle/: README.md  gen.ts
rust/vectors/: bytes.json  crypto.json  higher.json  keyderivation.json
