[package]
name = "railgun-contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "V2/V3 RAILGUN smart-contract bindings (alloy), RelayAdapt helpers + error parsing, chain network ID, event decoding, and the polled EventProvider trait (port of src/contracts, src/provider, src/chain, src/abi)."

[dependencies]
railgun-utils.workspace = true
railgun-crypto.workspace = true
railgun-models.workspace = true
thiserror.workspace = true
hex.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
async-trait.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }

alloy = { workspace = true, features = ["sol-types", "dyn-abi", "contract", "providers", "rpc-types", "json"] }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
