[package]
name = "railgun-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Cryptographic primitives for the RAILGUN engine (Poseidon, EdDSA-BabyJubJub, Ed25519, X25519, hashes), delegating to arkworks/RustCrypto/dalek."

[dependencies]
railgun-utils.workspace = true
thiserror.workspace = true
hex.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true

sha2.workspace = true
sha3.workspace = true
hmac.workspace = true
aes-gcm.workspace = true
aes.workspace = true
ctr.workspace = true
chacha20.workspace = true
chacha20poly1305.workspace = true
serde.workspace = true
serde_json.workspace = true

ark-ff.workspace = true
ark-ec.workspace = true
ark-ed-on-bn254.workspace = true
ark-serialize.workspace = true
light-poseidon.workspace = true
ark-bn254.workspace = true
poseidon-ark-no-std.workspace = true
# ark-bn254 0.4 — matches poseidon-ark-no-std's field type; aliased so it never
# collides with the 0.5 `ark-bn254` used elsewhere. Only `Fr` (FromStr/Display).
ark-bn254-04 = { package = "ark-bn254", version = "0.4" }
blake.workspace = true

ed25519-dalek.workspace = true
curve25519-dalek.workspace = true

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
