[package]
name = "railgun-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Key-value store + path-key encoding + AES-256-GCM encrypted values (port of src/database/database.ts)."

[dependencies]
railgun-utils.workspace = true
railgun-crypto.workspace = true
thiserror.workspace = true
hex.workspace = true
serde_json.workspace = true
