[package]
name = "railgun-note"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shield/unshield/transact notes, memo encoding, and token hashing (port of src/note/)."

[dependencies]
railgun-utils.workspace = true
railgun-crypto.workspace = true
railgun-models.workspace = true
railgun-key-derivation.workspace = true
thiserror.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
hex.workspace = true

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
num-bigint = { workspace = true }

