[package]
name = "railgun-poi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Proof-of-innocence: blinded commitments, global tree position, POI status, and the POI node client trait (port of src/poi/)."

[dependencies]
railgun-utils.workspace = true
railgun-crypto.workspace = true
railgun-models.workspace = true
thiserror.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
async-trait.workspace = true

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
num-bigint = { workspace = true }

