[package]
name = "railgun-prover"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Groth16 prove/verify trait, proof caches, and progress service (port of src/prover/)."

[features]
default = []
# Enables the native rapidsnark FFI backend. Without it the prover compiles but
# real proof generation returns an error (the native lib + circuit artifacts are
# not present in this workspace).
rapidsnark = []
# A test/dev ArtifactGetter that loads circuits from the repo's brotli-compressed
# test-artifacts-lite directory (no network).
bundled-test-artifacts = ["dep:brotli"]
# Pure-Rust Groth16 backend via ark-circom (reads circom .wasm + .zkey; no native
# lib). Uses arkworks 0.6 internally — isolated from the workspace's 0.5 by
# bridging only through decimal strings / the `Proof` struct.
ark-circom = ["dep:ark-circom", "dep:ark-bn254", "dep:ark-groth16", "dep:ark-ff", "dep:ark-std", "dep:wasmer"]

[dependencies]
railgun-utils.workspace = true
railgun-crypto.workspace = true
railgun-models.workspace = true
thiserror.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
brotli = { version = "7", optional = true }
ark-circom = { version = "0.6.0", optional = true }
ark-bn254 = { version = "0.6", optional = true }
ark-groth16 = { version = "0.6", optional = true }
ark-ff = { version = "0.6", optional = true }
ark-std = { version = "0.6", optional = true }
wasmer = { version = "6.1", optional = true }

[dev-dependencies]
serde_json = { workspace = true }
num-bigint = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
