[package]
name = "railgun-solutions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure in-memory coin selection / spending-group solutions (port of src/solutions/)."

[dependencies]
railgun-utils.workspace = true
railgun-models.workspace = true
railgun-note.workspace = true
railgun-key-derivation.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
thiserror.workspace = true

[dev-dependencies]
