[package]
name = "railgun-transaction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
railgun-utils.workspace = true
railgun-crypto.workspace = true
railgun-models.workspace = true
railgun-poi.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
num-bigint = { workspace = true }
