[package]
name = "railgun-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Byte/hex/bigint conversion utilities for the RAILGUN engine (port of src/utils/bytes.ts)."

[dependencies]
thiserror.workspace = true
num-bigint.workspace = true
hex.workspace = true
getrandom = "0.2"

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
