[package]
name = "railgun-wallet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Full / view-only / multisig / hardware RAILGUN wallets: key + address derivation, note decryption, balance bucketing, and scanning (port of src/wallet/)."

[dependencies]
railgun-utils.workspace = true
railgun-crypto.workspace = true
railgun-models.workspace = true
railgun-key-derivation.workspace = true
railgun-db.workspace = true
railgun-note.workspace = true
railgun-poi.workspace = true
railgun-transaction.workspace = true

thiserror.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
redb = "2"
